--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/echarts": "^4.9.22",
         "@types/luxon": "^3.4.2",
         "autoprefixer": "^10.4.14",
