--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,31 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@protobuf-ts/plugin": "^2.9.4",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/echarts": "^4.9.22",
         "@types/luxon": "^3.4.2",
-        "autoprefixer": "^10.4.14",
-        "daisyui": "3.1.7",
-        "postcss": "^8.4.23",
-        "prettier": "^3.2.4",
-        "prettier-plugin-tailwindcss": "^0.5.11",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.3.3",
-        "vite": "^4.5.2",
-        "vite-plugin-solid": "^2.9.1"
+        "autoprefixer": "^10.4.20",
+        "daisyui": "3.9.4",
+        "postcss": "^8.4.41",
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.6",
+        "tailwindcss": "^3.4.10",
+        "typescript": "^5.5.4",
+        "vite": "^5.4.2",
+        "vite-plugin-solid": "^2.10.2"
     },
     "dependencies": {
-        "@solidjs/router": "^0.8.4",
-        "axios": "^1.6.7",
-        "echarts": "^5.4.3",
+        "@protobuf-ts/grpcweb-transport": "^2.9.4",
+        "@protobuf-ts/runtime": "^2.9.4",
+        "@protobuf-ts/runtime-rpc": "^2.9.4",
+        "@solidjs/router": "^0.14.3",
+        "axios": "^1.7.5",
+        "echarts": "^5.5.1",
         "i18next": "^23.8.1",
         "i18next-browser-languagedetector": "^7.2.0",
         "i18next-resources-for-ts": "^1.5.0",
-        "luxon": "^3.4.4",
+        "luxon": "^3.5.0",
         "solid-icons": "^1.1.0",
         "solid-js": "^1.8.12",
         "theme-change": "^2.5.0",
