--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,4 +1,6 @@
 {
+  "useTabs": false,
+  "tabWidth": 2,
   "plugins": [
     "prettier-plugin-tailwindcss",
     "@trivago/prettier-plugin-sort-imports"
